tests/negative/test_call_arg_invoke_arg_param_owning.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

eval (fnc makeFoo () Foo {
    sym f:Foo;
    ret f;
});

eval (fnc bar (f:Foo) () {});

mac baz (x::preprocess) {
    bar x;

    ret \(block {});
};

fnc main () () {
    baz (makeFoo);
};